--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ngeohash": "^0.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lottie-player": "^1.4.1",
     "react-map-gl": "^5.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
